# lossy-compression

./: Cargo.toml  out.crunch
src/: main.rs
