[package]
name = "lossy-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.2"
macroquad = "0.4.5"
ril = {version ="0.10.1", features = ["all"]}
savefile = {version = "0.16.5", features = ["bzip2"]}
savefile-derive = "0.16.5"


[profile.dev.packages."*"]
opt-level = 3